blog auto backup script's commit

--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@
 
 # Site
 title: vanishke个人技术博客
-subtitle: '不积跬步，无以至千里；不积小流，无以成江海 -《劝学》'
-description: '每一个不曾起舞的日子，都是对生命的辜负 -尼采'
+subtitle: '不积跬步，无以至千里；不积小流，无以成江海'
+description: '每一个不曾起舞的日子，都是对生命的辜负'
 keywords: Java,Elasticsearch,MySQL,Linux
 author: vanishke
 language: zh-CN
