--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "hexo-renderer-stylus": "^2.0.0",
     "hexo-renderer-swig": "^1.1.0",
     "hexo-server": "^2.0.0",
+    "hexo-toc": "^1.1.0",
     "hexo-wordcount": "^6.0.1",
     "shelljs": "^0.8.4"
   }
